Fix Scrolling bug
The icons overlap the scroll bar on many browsers so moving it right 25px solves this issue

--- a/modules/backend/formwidgets/codeeditor/assets/css/codeeditor.css
+++ b/modules/backend/formwidgets/codeeditor/assets/css/codeeditor.css
@@ -8,7 +8,7 @@
 .field-codeeditor.size-giant{min-height:350px}
 .field-codeeditor .ace_search{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";font-size:14px;color:#333333;z-index:13}
 .field-codeeditor .editor-code{-webkit-border-radius:3px;-moz-border-radius:3px;border-radius:3px}
-.field-codeeditor .editor-toolbar{position:absolute;top:10px;right:10px;z-index:10}
+.field-codeeditor .editor-toolbar{position:absolute;top:10px;right:25px;z-index:10}
 .field-codeeditor .editor-toolbar > ul,.field-codeeditor .editor-toolbar ul > li{list-style-type:none;padding:0;margin:0}
 .field-codeeditor .editor-toolbar > ul > li{float:left}
 .field-codeeditor .editor-toolbar > ul > li .tooltip.left{margin-right:25px}
